import * as React from 'react';
import { shallow, render } from 'enzyme';
import Icon from '..';

describe('<Icon />', () => {
  it('renders correctly', () => {
    // TODO: read https://diessi.ca/blog/how-to-exclude-css-images-anything-from-unit-tests/
    // const component = render(<Icon name="cross" />);
    // expect(component).toMatchSnapshot();
  });
});
